--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.App{
+    display:flex;
+    flex-direction: row;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#phoneDetails{
+    max-width: 50%;
+    text-align: center;
+    margin-right:200px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#phonesList{
+    margin:50px;
+    background-color: rgb(225, 241, 209);
+    padding:10px;
+    border-radius: 10px;
+    box-shadow: 6px 6px 15px 6px #888888;
+    height:100%
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#each-phone{
+    margin:10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.no-decoration{
+    text-decoration: none;
 }
